minimum fix for left variant alignment

--- a/blocks/v2-accordion-column/v2-accordion-column.css
+++ b/blocks/v2-accordion-column/v2-accordion-column.css
@@ -181,10 +181,6 @@
   }
 
   /* Left variant */
-  .v2-accordion-column--left .v2-accordion-column__items-container {
-    align-items: flex-end;
-  }
-
   .v2-accordion-column--left .v2-accordion-column__accordion-container {
     justify-content: start;
   }
